# python-django

./: .coverage  .gitignore  .gitigonre  Dockerfile  Ingestion-run.sh  README.md  db.sqlite3  docker-build.sh  docker-compose.yml  docker-run-entrypoints.sh  docker-run-tests.sh  docker-run.sh  docker-test.sh  migrate_run.sh  pyproject.toml  pytest-run.sh  requirements.txt  service_dev_start.sh  service_prod_start.sh  service_start.sh  test_inspectdb.sh  wait_for_es.sh
.circleci/: config.yml
.github/workflows/: python-package.yml
book_rest_api/: apps.py  urls.py  views.py
config/: settings-prod.py  settings.py  settings_dev.py  settings_prod.py  urls.py
rest_api/: injector.py  models.py  router.py  serializers.py  urls.py  views.py  views_test.py
rest_api/migrations/: 0001_initial.py  0002_alter_student_options_alter_userrank_options.py  0002_log.py  0003_alter_student_options_alter_userrank_table.py  0004_alter_student_options.py  0005_alter_student_table.py  0006_alter_student_options.py  0007_alter_student_options.py  0008_alter_userrank_table.py
rest_api/service/Handler/: QueryBuilder.py  SearchOmniHandler.py  redis_handler.py
rest_api/service/Utils/: ES_Utils.py
rest_api/tests/: conftest.py  pytest.ini  test_build_query.py  test_elasticsearch.py  test_message.py  test_model.py  test_rest_api.py
rest_second_api/: apps.py  urls.py  views.py
rest_ui/: apps.py  urls.py  views.py
rest_ui/controller/: Rule.py
rest_ui/service/: SearchHandler.py
rest_ui/static/: main.css
rest_ui/static/css/: loading.css  main.css
rest_ui/static/script/: autocomplete.js
rest_ui/templates/: all_students.html
rest_ui/templates/default/: all_students.html  dttables.html
rest_ui/templates/search/: index.html  search.html
rest_ui/templatetags/: highlight.py
test-reports/junit/: pytest.xml
tools/: Search-indexing-db-script.py  Search-pymongo-db-script.py  Search-pymongo-script.py  Search_Engine.py
tools/query/: mongodb_sql
