[tool.poetry]
name = "python-django"
version = "0.1.0"
description = "Python-Search Project"
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"
packages = [{include = "python_django"}]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.13.0"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-prometheus = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
